Only use samtools merge when the inputs are sorted