@@ -1307,7 +1307,6 @@ public class SequenceAlignmentTask extends WorkDirectoryTask<SequenceAlignmentTa
             RecordedAction mergeAction = new RecordedAction(MERGE_ALIGNMENT_ACTIONNAME);
             Date start = new Date();
             mergeAction.setStartTime(start);
-            SamtoolsMerger merger = new SamtoolsMerger(getPipelineJob().getLogger());
             List<File> bams = new ArrayList<>();
             for (File o : alignOutputs)
             {
@@ -1317,20 +1316,45 @@ public class SequenceAlignmentTask extends WorkDirectoryTask<SequenceAlignmentTa
                 getHelper().getFileManager().addIntermediateFile(SequenceAnalysisService.get().getExpectedBamOrCramIndex(o));
             }
 
-            bam = new File(alignOutputs.get(0).getParent(), FileUtil.getBaseName(alignOutputs.get(0).getName()) + ".merged.bam");
+            bam = new File(alignOutputs.getFirst().getParent(), FileUtil.getBaseName(alignOutputs.getFirst().getName()) + ".merged.bam");
             getHelper().getFileManager().addOutput(mergeAction, "Merged BAM", bam);
+            Set<SAMFileHeader.SortOrder> sortOrders = alignOutputs.stream().map(x -> {
+                try
+                {
+                    return SequenceUtil.getBamSortOrder(x);
+                }
+                catch (IOException e)
+                {
+                    throw new RuntimeException(e);
+                }
+            }).collect(Collectors.toSet());
+
             //NOTE: merged BAMs will be deleted as intermediate files, and if we delete too early this breaks job resume
-            merger.mergeBams(bams, bam);
-            getHelper().getFileManager().addCommandsToAction(merger.getCommandsExecuted(), mergeAction);
+            String toolName;
+            if (sortOrders.size() > 1 || sortOrders.iterator().next() != SAMFileHeader.SortOrder.coordinate)
+            {
+                toolName = "MergeSamFiles";
+                MergeSamFilesWrapper merger = new MergeSamFilesWrapper(getPipelineJob().getLogger());
+                merger.execute(bams, bam, false);
+                getHelper().getFileManager().addCommandsToAction(merger.getCommandsExecuted(), mergeAction);
+            }
+            else
+            {
+                // This will be faster, but requires sorted input:
+                toolName = "Samtools merge";
+                SamtoolsMerger merger = new SamtoolsMerger(getPipelineJob().getLogger());
+                merger.mergeBams(bams, bam);
+                getHelper().getFileManager().addCommandsToAction(merger.getCommandsExecuted(), mergeAction);
+            }
 
             Date end = new Date();
             mergeAction.setEndTime(end);
-            getJob().getLogger().info("MergeSamFiles Duration: " + DurationFormatUtils.formatDurationWords(end.getTime() - start.getTime(), true, true));
+            getJob().getLogger().info(toolName + " Duration: " + DurationFormatUtils.formatDurationWords(end.getTime() - start.getTime(), true, true));
             alignActions.add(mergeAction);
         }
         else
         {
-            bam = alignOutputs.get(0);
+            bam = alignOutputs.getFirst();
         }
 
         return bam;
